--- a/graphql_frontend/package.json
+++ b/graphql_frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.5",
+    "graphql-ws": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
