--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-
 	"scripts": {
-		"start:prod": "cd graphql_server/ && npm run start & cd graphql_frontend/ && npm run preview"
-
+    "start:prod": "cd graphql_server/ && npm run start & cd graphql_frontend/ && npm run preview",
+		"test-e2e": "playwright test",
+    "test-e2e:report": "playwright show-report"
+	},
+  "devDependencies": {
+    "@playwright/test": "^1.51.1",
+    "@types/node": "^22.14.1"
 	}
 }
