--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
           MONGODB_URI: ${{secrets.MONGODB_URI}}
         run: cd graphql_server/ && npm run test && cd ../graphql_frontend && npm run test && cd ..
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: npm install && npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v4
