--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Install Playwright Browsers
         run:  npx playwright install --with-deps
       - name: Run Playwright tests
+        env: 
+          MONGODB_URI: ${{secrets.MONGODB_URI}}
         run: npx playwright test
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
