try to automatic deploy

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,11 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+      - name: Trigger deployment
+        if: ${{ github.event_name == 'push' }}
+        env:
+          ID_BACK: ${{secrets.RENDER_SERVICE_ID_BACK}}
+          ID_FRONT: ${{secrets.RENDER_SERVICE_ID_FRONT}}
+          API_BACK: ${{secrets.RENDER_API_KEY_BACK}}
+          API_FRONT: ${{secrets.RENDER_API_KEY_FRONT}}
+        run: curl https://api.render.com/deploy/srv-${{ ID_FRONT }}?key=${{ API_FRONT }} && curl https://api.render.com/deploy/srv-${{ ID_BACK }}?key=${{ API_BACK }}
