--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,6 +3,8 @@ name: Deployment pipeline
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
     types: [opened, synchronize]
 
 
