--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,6 +46,21 @@ jobs:
           API_BACK: ${{secrets.RENDER_API_KEY_BACK}}
           API_FRONT: ${{secrets.RENDER_API_KEY_FRONT}}
         run: curl https://api.render.com/deploy/srv-${{ env.ID_FRONT }}?key=${{ env.API_FRONT }} && curl https://api.render.com/deploy/srv-${{ env.ID_BACK }}?key=${{ env.API_BACK }}
+      - name: Notify success
+        env: 
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        uses: Ilshidur/action-discord@0c4b27844ba47cb1c7bee539c8eead5284ce9fa9
+        if: success()
+        with:
+          args: "Successful build {{EVENT_PAYLOAD.repository.full_name}}"
+      - name: Notify failure
+        env: 
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        uses: Ilshidur/action-discord@0c4b27844ba47cb1c7bee539c8eead5284ce9fa9
+        if: failure()
+        with:
+            args: "Build failure {{EVENT_PAYLOAD.repository.full_name}} at commit {{EVENT_PAYLOAD.after}}"
+  
   tag_release:
     needs: [deployment_pipeline]
     runs-on: ubuntu-22.04
