--- a/.github/workflows/health_check.yml
+++ b/.github/workflows/health_check.yml
@@ -2,35 +2,25 @@ name: Periodic health check
 
 on:
   schedule:
-    - cron: '0 18 * 4 4'
+    - cron: '0 11 * 4 5' #min hour dm m dw
 
 jobs:
   health_check:
     runs-on: ubuntu-22.04
     steps:
-      - name: Check the deployed frontend
-        uses: jtalk/url-health-check-action@v4
-        with:
-          # Check the following URLs one by one sequentially
-          url: https://fullstack-part8-graphql-1.onrender.com/
-          # Follow redirects, or just report success on 3xx status codes
-          follow-redirect: false # Optional, defaults to "false"
-          # Fail this action after this many failed attempts
-          max-attempts: 3 # Optional, defaults to 1
-          # Delay between retries
-          retry-delay: 5s # Optional, only applicable to max-attempts > 1
-          # Retry all errors, including 404. This option might trigger curl upgrade.
-          retry-all: false # Optional, defaults to "false"
       - name: Check the deployed backend
         uses: jtalk/url-health-check-action@v4
         with:
-          # Check the following URLs one by one sequentially
           url: https://fullstack-part8-graphql.onrender.com/
-          # Follow redirects, or just report success on 3xx status codes
-          follow-redirect: false # Optional, defaults to "false"
-          # Fail this action after this many failed attempts
-          max-attempts: 3 # Optional, defaults to 1
-          # Delay between retries
-          retry-delay: 5s # Optional, only applicable to max-attempts > 1
-          # Retry all errors, including 404. This option might trigger curl upgrade.
-          retry-all: false # Optional, defaults to "false"
+          follow-redirect: false
+          max-attempts: 3
+          retry-delay: 10s
+          retry-all: false
+      - name: Check the deployed frontend
+        uses: jtalk/url-health-check-action@v4
+        with:
+          url: https://fullstack-part8-graphql-1.onrender.com/
+          follow-redirect: false 
+          max-attempts: 3
+          retry-delay: 5s 
+          retry-all: false
