now env vars should be found in actions too

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   deployment_pipeline:
     runs-on: ubuntu-22.04
+    env:
+      VITE_URI: ${{vars.VITE_URI}}
+      VITE_URL: ${{vars.VITE_URL}}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
